--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@popperjs/core": "^2.11.0",
     "bootstrap": "^4.5.3",
-    "ngx-bootstrap": "^7.1.0",
+    "jquery": "^3.6.0",
+    "ngx-bootstrap": "7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
