--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~12.2.10",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular-devkit/build-angular": "~12.2.10",
     "@angular/animations": "~12.2.0",
+    "@angular/cli": "~12.2.10",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
+    "@angular/compiler-cli": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
@@ -23,12 +24,12 @@
     "@angular/router": "~12.2.0",
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "@angular-devkit/build-angular": "~12.2.10"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.10",
